# uproot

./: .gitignore  .pre-commit-config.yaml  .semgrep.yml  1636BA9B.asc  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  CONTRIBUTORS.md  DEPENDENCIES.md  FEATURES.md  INSTALLATION-PIP.md  INSTALLATION-UV.md  Makefile  README.md  SECURITY.md  announcements.json  build_wheel.sh  check_translations.py  complexity.py  info.json  pyproject.toml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml
src/uproot/: __init__.py  admin.py  cache.py  chat.py  cli.py  constraints.py  core.py  data.py  defaultcli.py  deployment.py  drivers.py  events.py  examples.py  fields.py  flexibility.py  i18n.py  jobs.py  model.py  models.py  modules.py  pages.py  queries.py  queues.py  read.py  rooms.py  server.py  server1.py  server2.py  server3.py  server4.py  smithereens.py  stable.py  storage.py  types.py
src/uproot/_static/: admin.css  admin.js  adminchat.js  jserrors.js  monitor.js  multiview.js  simulate.js  style.css  uproot.js  viewdata.js  webfonts.css
src/uproot/default/: Bare.html  Base.html  BaseMarkdown.html  Boilerplate.html  Chat.html  DataHistory.html  End.html  GroupCreatingWait.html  Initialize.html  InternalError.html  JustPOST.html  LandingPage.html  Macros.html  RoomFull.html  RoomHello.html  SynchronizingWait.html  TestingHead.html  terms.csv
src/uproot/default/admin/: Admin.html  AllSessions.html  AuthStatus.html  Citation.html  CreateSession.html  Dashboard.html  Login.html  Macros.html  Monitor.html  MultiView.html  NewRoom.html  NewSession.html  PublicDemo.html  Room.html  RoomMain.html  RoomSettingsForm.html  Rooms.html  RoomsNew.html  SelectData.html  ServerStatus.html  Session.html  SessionChat.html  SessionCreate.html  SessionData.html  SessionDigest.html  SessionMain.html  SessionMonitor.html  SessionMultiview.html  SessionPipelines.html  SessionViewdata.html  Sessions.html  SessionsNew.html  Status.html  ViewData.html  WaitingRooms.html  _macros.html
src/uproot/default/locales/: de.yml  en.yml  es.yml  ja.yml
src/uproot/services/: __init__.py  auth.py  config_service.py  data_service.py  player_service.py  room_service.py  session_service.py
src/uproot/static/: CascadiaMono-2407.24.css  admin.css  admin.js  jserrors.js  monitor.js  style.css  tables.js  uproot.js  viewdata.js
src/uproot/static/fonts/: inter.css
src/uproot/static/fonts/CascadiaCode-2407.24/: CascadiaMono.css
src/uproot/static/fonts/bootstrap-icons-1.13.1/: bootstrap-icons.css
src/uproot/static/foreign/: upgrade-auto.sh  upgrade.sh
src/uproot/utils/: __init__.py  redirect.py
tests/: test_adminchat.py  test_cache.py  test_check_translations.py  test_constraints.py  test_data.py  test_expand.py  test_fields_from_session.py  test_flexibility.py  test_locales.py  test_login_template.py  test_longest_common_prefix.py  test_model.py  test_optional_call.py  test_pages_markdown.py  test_queries.py  test_read.py  test_server_admin_passwords.py  test_sha256.py  test_smithereens.py  test_storage.py  test_storage2.py  test_storage3.py  test_storage4.py  test_token_unchecked.py  test_tokens.py  test_types.py  test_waits.py
