[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uproot-science"
version = "0.0.1"
description = "A modern experimental framework"
readme = "README.md"
license = "LGPL-3.0-or-later"
authors = [
{name = "Max R. P. Grossmann", email = "max@uproot.science"},
{name = "Holger Gerhardt", email = "holger@uproot.science"}
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.12.15",
    "click==8.2.1",
    "fastapi==0.115.12",
    "jinja2==3.1.6",
    "msgpack==1.1.0",
    "orjson==3.10.18",
    "pydantic==2.11.7",
    "python-multipart==0.0.20",
    "sortedcontainers==2.4.0",
    "uvicorn==0.34.3",
    "watchdog==6.0.0",
    "websockets==15.0.1",
    "wtforms==3.2.1",
]

[project.urls]
Homepage = "https://uproot.science/"
Repository = "https://github.com/mrpg/uproot"

[project.scripts]
uproot = "uproot.defaultcli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
uproot = ["default/**/*", "static/**/*"]

[tool.black]
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[project.optional-dependencies]
pg = [
    "psycopg==3.2.9",
    "psycopg-pool==3.2.6",
]
dev = [
    "black==25.1.0",
    "isort==6.0.1",
    "mypy==1.11.2",
    "pytest==8.4.0",
    "pytest-asyncio==1.0.0",
    "pytest-cov==6.2.1",
    "ruff==0.11.13",
]
docs = [
    "mkdocs-material==9.6.14"
]
iban = [
    "schwifty==2025.1.0"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_any_generics = true
check_untyped_defs = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=uproot --cov-report=term-missing"
asyncio_mode = "auto"
