[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uproot-science"
version = "0.0.1"
description = "A modern experimental framework"
readme = "README.md"
license = "LGPL-3.0-or-later"
authors = [
{name = "Max R. P. Grossmann", email = "max@uproot.science"},
{name = "Holger Gerhardt", email = "holger@uproot.science"}
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.13.3",
    "appendmuch",  # TODO: Fix actual version
    "click==8.3.1",
    "fastapi==0.129.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "orjson==3.11.7",
    "pydantic==2.12.5",
    "strictyaml==1.7.3",
    "python-multipart==0.0.22",
    "setproctitle==1.3.7",
    "sortedcontainers==2.4.0",
    "uvicorn==0.40.0",
    "watchdog==6.0.0",
    "websockets==16.0",
    "wtforms==3.2.1",
]

[project.urls]
Homepage = "https://uproot.science/"
Repository = "https://github.com/mrpg/uproot"

[project.scripts]
uproot = "uproot.defaultcli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
uproot = ["default/**/*", "_static/**/*"]

[tool.black]
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | tests
)/
'''

[tool.ruff]
src = ["src"]
exclude = ["build", "dist", ".venv", "venv", ".git", "__pycache__", "tests"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src"]
skip = ["tests", "build", "dist", ".venv", "venv"]

[project.optional-dependencies]
pg = [
    "appendmuch[pg]",  # TODO: Fix actual version
]
dev = [
    "bandit==1.9.3",
    "black==26.1.0",
    "deptry==0.24.0",
    "isort==7.0.0",
    "mypy==1.19.1",
    "pip-audit==2.10.0",
    "pip-tools==7.5.3",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "radon==6.0.1",
    "ruff==0.15.0",
]
iban = [
    "schwifty==2026.1.0"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = false  # can be reenabled later, there is a bug here with the CI
no_implicit_optional = true
disallow_any_generics = true
check_untyped_defs = true
strict_equality = true
exclude = ["tests", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=uproot --cov-report=term-missing"
asyncio_mode = "auto"

[tool.bandit]
exclude_dirs = ["tests", "build", ".venv", "venv"]
skips = []

[tool.deptry]
extend_exclude = ["tests", "build"]

[tool.deptry.per_rule_ignores]
DEP002 = [
    "setuptools",
    "wheel",
    # Dev tools not imported in code
    "bandit",
    "black",
    "deptry",
    "isort",
    "mypy",
    "pip-audit",
    "pip-tools",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "radon",
    "ruff",
    # Runtime dependencies not directly imported
    "python-multipart",  # Required by FastAPI for form data
    "websockets",  # Required for WebSocket support
]
DEP003 = [
    "uproot",  # Internal package imports
    "markupsafe",  # Jinja2 transitive dependency
    "typing_extensions",  # Pydantic transitive dependency
    "starlette",  # FastAPI transitive dependency
]
DEP001 = [
    "main",  # Not a package, used for __name__ == '__main__'
]
